[gd_scene load_steps=4 format=3 uid="uid://q8f84bu3ojuy"]

[ext_resource type="Script" uid="uid://rc1pkqhhnl55" path="res://scenes/ui/HUD.gd" id="1_atyv1"]
[ext_resource type="Texture2D" uid="uid://c5co5gu01jxtq" path="res://assets/ui/ancient-coin-icon(1).svg" id="2_6ll6g"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ig75s"]

[node name="HUD" type="CanvasLayer" groups=["hud"]]
script = ExtResource("1_atyv1")

[node name="MarginContainer" type="MarginContainer" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(800, 80)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(780, 60)
layout_mode = 2
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HealthBar" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 5

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer/VBoxContainer/HealthBar"]
custom_minimum_size = Vector2(20, 30)
layout_mode = 2
color = Color(0.8, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/HBoxContainer/VBoxContainer/HealthBar"]
custom_minimum_size = Vector2(20, 30)
layout_mode = 2
color = Color(0.8, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="MarginContainer/HBoxContainer/VBoxContainer/HealthBar"]
custom_minimum_size = Vector2(20, 30)
layout_mode = 2
color = Color(0.8, 0, 0, 1)

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AbilityIcon" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("PlaceholderTexture2D_ig75s")

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CurrencyDisplay" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="CoinCount" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer3/CurrencyDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.137255, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 24
text = "000"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer3/CurrencyDisplay"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_6ll6g")
stretch_mode = 3
